--- a/holamundo.yml
+++ b/holamundo.yml
@@ -1,4 +1,4 @@
-message: mensaje extremadamente mega aburrido 
+message: me quiero ir a mi casa, sin acritud
 url: jdbc:h2:file:c:/h2/bbdd5
 
 eureka:
