--- a/holamundo.yml
+++ b/holamundo.yml
@@ -1,4 +1,4 @@
-message: siete caballos vienen de bonanza
+message: Como pasa el tiempo cuando estás entretenido...!
 url: jdbc:h2:file:c:/h2/bbdd5
 
 eureka:
