--- a/holamundo.yml
+++ b/holamundo.yml
@@ -1,4 +1,4 @@
-message: Como pasa el tiempo cuando estás entretenido...!
+message: Como me joden los listos
 url: jdbc:h2:file:c:/h2/bbdd5
 
 eureka:
