--- a/holamundo.yml
+++ b/holamundo.yml
@@ -1,4 +1,4 @@
-message: Siete caballos vienen de Bonanza
+message: Indiana Jones y el templo malditos alumnos
 url: jdbc:h2:file:c:/h2/bbdd5
 
 eureka:
